[package]
name = "rocd"
version = "0.1.0"
edition = "2021"

[dependencies]
rkyv = "0.8.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"
uuid = "1.17.0"
quinn = "0.11.8"
rcgen = {version="0.13.2", features=["crypto", "pem", "ring"]}
rustls-pki-types = "1.12.0"
clap = { version = "4.5.40", features = ["derive"] }
tokio = {version = "1.45.0", features = ["full"] }
rustls = {version="0.23.27", features=["std"]}
directories = "6.0.0"
