[package]
name = "rocs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
lazy_static = "1.4"
once_cell = "1.19"
# rancor = "0.1.0"
# rkyv = "0.8.10"
# rkyv_derive = "0.8.10" 
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = {version = "1.45.0", features = ["full"] }
anyhow = "1.0.98"
uuid = { version = "1.17.0", features = ["v4"] }
quinn = "0.11.8"
rcgen = {version="0.13.2", features=["crypto", "pem", "ring"]}
rustls-pki-types = "1.12.0"
dirs = "6.0.0"
